# bots

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yaml
scripts/: mongo-init.js
src/: run.py
src/bots/abraham/: AbrahamAssistantCog.py  AbrahamCharacterCog.py  AbrahamGeneratorCog.py
src/bots/abraham/prompts/: character_description.txt  creator_prompt.txt  documentation.txt  (+2 more)
src/bots/agartha/: .env.example  AgarthaAssistantCog.py  AgarthaGeneratorCog.py
src/bots/banny/: BannyAssistantCog.py  BannyGeneratorCog.py  banny.py
src/bots/banny-stg/: .env.example  BannyCharacterCog.py  BannyGeneratorCog.py
src/bots/dada/: DadaAssistantCog.py  DadaGeneratorCog.py
src/bots/does/: DoesAssistantCog.py  DoesGeneratorCog.py
src/bots/eden/: .env.example  EdenAssistantCog.py  EdenGeneratorCog.py  EdenLogosCharacterCog.py  eden.py
src/bots/eden-stg/: .env.example  EdenCharacterCog.py
src/bots/jabrils/: EdenGeneratorCog.py  EdenLogosCharacterCog.py  JabrilsAssistantCog.py  JabrilsGeneratorCog.py
src/bots/kojii/: EdenGeneratorCog.py  EdenLogosCharacterCog.py  KojiiAssistantCog.py  KojiiCharacterCog.py  KojiiGeneratorCog.py
src/bots/swoles/: SwolesAssistantCog.py  SwolesGeneratorCog.py
src/bots/verdelis/: VerdelisAssistantCog.py  VerdelisGeneratorCog.py
src/bots/yaleau/: .env.example  YaleauAssistantCog.py  YaleauGeneratorCog.py
src/cogs/: AssistantCog.py  CharacterCog.py  CharacterGeneratorCog.py  Eden2Cog.py  GeneratorCog.py  LogosCharacterCog.py
src/common/: EdenCog.py  constants.py  discord.py  eden.py  logos.py  models.py
(+30 files in other folders)
