[project]
name = "bots"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Jonathan Miller", email = "jon@jmill.dev" }
]
dependencies = [
    "openai>=1.3.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.6.0",
    "py-cord>=2.4.1",
    "eden-sdk @ git+https://github.com/edenartlab/eden2.git#subdirectory=sdk"
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]